--- a/hands_on_ex2/hands_on_ex2.3.qmd
+++ b/hands_on_ex2/hands_on_ex2.3.qmd
@@ -16,7 +16,7 @@ Two data sets will be used in this hands-on exercise, they are:
 
 -   Hunan province administrative boundary layer at county level. This is a geospatial data set in ESRI shapefile format.
 
--   Hunan_2012.csv: This csv file contains selected Hunan\'s local development indicators in 2012.
+-   Hunan_2012.csv: This csv file contains selected Hunan's local development indicators in 2012.
 
 ### **Setting the Analytical Tools**
 
@@ -94,13 +94,13 @@ rswm_q <- nb2listw(wm_q,
 rswm_q
 ```
 
-### **Global Spatial Autocorrelation: Moran\'s I**
+### **Global Spatial Autocorrelation: Moran's I**
 
-In this section, I will learn how to perform Moran\'s I statistics testing by using [*moran.test()*](https://r-spatial.github.io/spdep/reference/moran.test.html) of **spdep**.
+In this section, I will learn how to perform Moran's I statistics testing by using [*moran.test()*](https://r-spatial.github.io/spdep/reference/moran.test.html) of **spdep**.
 
-### **Maron\'s I test**
+### **Maron's I test**
 
-The code chunk below performs Moran\'s I statistical testing using [*moran.test()*](https://r-spatial.github.io/spdep/reference/moran.test.html) of **spdep**.
+The code chunk below performs Moran's I statistical testing using [*moran.test()*](https://r-spatial.github.io/spdep/reference/moran.test.html) of **spdep**.
 
 ```{r}
 moran.test(hunan$GDPPC, 
@@ -113,9 +113,9 @@ moran.test(hunan$GDPPC,
 
 The Moran's I test suggests strong evidence against the null hypothesis of spatial randomness (p-value = 1.095e-06). The Moran's I statistic of 0.3007 indicates a significant positive spatial autocorrelation in the variable 'GDPPC' within the study area. Areas in this region with similar GDPPC values tend to be spatially clustered or adjacent to each other more often than expected by random chance.
 
-#### Computing Monte Carlo Moran\'s I
+#### Computing Monte Carlo Moran's I
 
-The code chunk below performs permutation test for Moran\'s I statistic by using [*moran.mc()*](https://r-spatial.github.io/spdep/reference/moran.mc.html) of **spdep**. A total of 1000 simulation will be performed.
+The code chunk below performs permutation test for Moran's I statistic by using [*moran.mc()*](https://r-spatial.github.io/spdep/reference/moran.mc.html) of **spdep**. A total of 1000 simulation will be performed.
 
 ```{r}
 set.seed(1234)
@@ -131,7 +131,7 @@ bperm
 
 The permutation test for Moran's I statistic indicates strong evidence against the null hypothesis of spatial randomness. The observed Moran's I value (0.30075) falls within the highest ranks of the simulated values, and the small p-value (0.001) suggests that this value is significantly greater than what would be expected by chance alone. Therefore, it supports the conclusion that there is a significant positive spatial autocorrelation in the 'GDPPC' variable within the study area. Areas with similar GDPPC values tend to be spatially clustered or adjacent to each other more often than expected by random chance.
 
-#### Visualising Monte Carlo Moran\'s I
+#### Visualising Monte Carlo Moran's I
 
 In the code chunk below [*hist()*](https://www.rdocumentation.org/packages/graphics/versions/3.6.2/topics/hist) and [*abline()*](https://www.rdocumentation.org/packages/graphics/versions/3.6.2/topics/abline) of R Graphics are used.
 
@@ -160,13 +160,13 @@ abline(v=0,
 
 Skewed distribution that is of right skewed. It peaks at -0.05
 
-### **Global Spatial Autocorrelation: Geary\'s c**
+### **Global Spatial Autocorrelation: Geary's c**
 
-In this section, you will learn how to perform Geary\'s c statistics testing by using appropriate functions of **spdep** package.
+In this section, you will learn how to perform Geary's c statistics testing by using appropriate functions of **spdep** package.
 
-#### Geary\'s C test
+#### Geary's C test
 
-The code chunk below performs Geary\'s C test for spatial autocorrelation by using [*geary.test()*](https://r-spatial.github.io/spdep/reference/geary.test.html) of **spdep**.
+The code chunk below performs Geary's C test for spatial autocorrelation by using [*geary.test()*](https://r-spatial.github.io/spdep/reference/geary.test.html) of **spdep**.
 
 ```{r}
 geary.test(hunan$GDPPC, listw=rswm_q)
@@ -176,9 +176,9 @@ geary.test(hunan$GDPPC, listw=rswm_q)
 
 Given the low p-value, we can conclude that there is significant evidence to reject the null hypothesis of spatial randomness. We have sufficient evidence to conclude that the alternative hypothesis that there is spatial autocorrelation present in the variable "hunan\$GDPPC." Moreover, the Geary C statistic being substantially lower than the expected value under the null hypothesis further supports this conclusion.
 
-#### Computing Monte Carlo Geary\'s C
+#### Computing Monte Carlo Geary's C
 
-The code chunk below performs permutation test for Geary\'s C statistic by using [*geary.mc()*](https://r-spatial.github.io/spdep/reference/geary.mc.html) of **spdep**.
+The code chunk below performs permutation test for Geary's C statistic by using [*geary.mc()*](https://r-spatial.github.io/spdep/reference/geary.mc.html) of **spdep**.
 
 ```{r}
 set.seed(1234)
@@ -194,7 +194,7 @@ The very low p-value (0.001) suggests strong evidence against the null hypothesi
 
 Furthermore, the observed rank of 1 among the 1000 simulations indicates that your observed statistic is at the extreme end of the simulated distribution. This strengthens the evidence that the observed spatial autocorrelation is significantly higher than what would be expected by chance.
 
-#### Visualising the Monte Carlo Geary\'s C
+#### Visualising the Monte Carlo Geary's C
 
 ```{r}
 mean(bperm$res[1:999])
@@ -219,7 +219,7 @@ Skewed distribution that is of left skewed. It peaks at 1.05
 
 ## **Spatial Correlogram**
 
-### **Compute Moran\'s I correlogram**
+### **Compute Moran's I correlogram**
 
 ```{r}
 MI_corr <- sp.correlogram(wm_q, 
@@ -234,7 +234,7 @@ plot(MI_corr)
 print(MI_corr)
 ```
 
-### **Compute Geary\'s C correlogram and plot**
+### **Compute Geary's C correlogram and plot**
 
 ```{r}
 GC_corr <- sp.correlogram(wm_q, 
@@ -251,9 +251,9 @@ print(GC_corr)
 
 ## **Cluster and Outlier Analysis**
 
-In this section, I will learn how to apply appropriate Local Indicators for Spatial Association (LISA), especially local Moran\'I to detect cluster and/or outlier from GDP per capita 2012 of Hunan Province, PRC.
+In this section, I will learn how to apply appropriate Local Indicators for Spatial Association (LISA), especially local Moran'I to detect cluster and/or outlier from GDP per capita 2012 of Hunan Province, PRC.
 
-The code chunks below are used to compute local Moran\'s I of *GDPPC2012* at the county level.
+The code chunks below are used to compute local Moran's I of *GDPPC2012* at the county level.
 
 ```{r}
 fips <- order(hunan$County)
@@ -263,7 +263,7 @@ head(localMI)
 
 *localmoran()* function returns a matrix of values whose columns are:
 
--   Ii: the local Moran\'s I statistics
+-   Ii: the local Moran's I statistics
 
 -   E.Ii: the expectation of local moran statistic under the randomisation hypothesis
 
@@ -282,7 +282,7 @@ printCoefmat(data.frame(
   check.names=FALSE)
 ```
 
-#### Mapping the local Moran\'s I
+#### Mapping the local Moran's I
 
 The code chunks below can be used to perform the task. The out SpatialPolygonDataFrame is called *hunan.localMI*.
 
@@ -291,9 +291,9 @@ hunan.localMI <- cbind(hunan,localMI) %>%
   rename(Pr.Ii = Pr.z....E.Ii..)
 ```
 
-#### Mapping local Moran\'s I values
+#### Mapping local Moran's I values
 
-Using choropleth mapping functions of **tmap** package, we can plot the local Moran\'s I values by using the code chinks below.
+Using choropleth mapping functions of **tmap** package, we can plot the local Moran's I values by using the code chinks below.
 
 ```{r}
 tm_shape(hunan.localMI) +
@@ -304,9 +304,9 @@ tm_shape(hunan.localMI) +
   tm_borders(alpha = 0.5)
 ```
 
-####  Mapping local Moran\'s I p-values
+#### Mapping local Moran's I p-values
 
-The code chunks below produce a choropleth map of Moran\'s I p-values by using functions of **tmap** package.
+The code chunks below produce a choropleth map of Moran's I p-values by using functions of **tmap** package.
 
 ```{r}
 tm_shape(hunan.localMI) +
@@ -317,7 +317,7 @@ tm_shape(hunan.localMI) +
   tm_borders(alpha = 0.5)
 ```
 
-#### Mapping both local Moran\'s I values and p-values
+#### Mapping both local Moran's I values and p-values
 
 The code chunk below will be used to create such visualisation.
 
@@ -390,7 +390,7 @@ hunan$lag_GDPPC <- lag.listw(rswm_q, hunan$GDPPC)
 DV <- hunan$lag_GDPPC - mean(hunan$lag_GDPPC)     
 ```
 
-This is follow by centering the local Moran\'s around the mean.
+This is follow by centering the local Moran's around the mean.
 
 ```{r}
 LM_I <- localMI[,1] - mean(localMI[,1])    
@@ -434,7 +434,7 @@ tm_shape(hunan.localMI) +
   tm_borders(alpha=0.5)
 ```
 
-For effective interpretation, it is better to plot both the local Moran\'s I values map and its corresponding p-values map next to each other.
+For effective interpretation, it is better to plot both the local Moran's I values map and its corresponding p-values map next to each other.
 
 The code chunk below will be used to create such visualisation.
 
@@ -481,9 +481,9 @@ Observation
 
 ## **Hot Spot and Cold Spot Area Analysis**
 
-The term \'hot spot\' has been used generically across disciplines to describe a region or value that is higher relative to its surroundings (Lepers et al 2005, Aben et al 2012, Isobe et al 2015).
+The term 'hot spot' has been used generically across disciplines to describe a region or value that is higher relative to its surroundings (Lepers et al 2005, Aben et al 2012, Isobe et al 2015).
 
-### **Getis and Ord\'s G-Statistics**
+### **Getis and Ord's G-Statistics**
 
 The analysis consists of three steps:
 
@@ -550,7 +550,7 @@ summary(knn_lw)
 
 ## **Computing Gi statistics**
 
-###  **Gi statistics using fixed distance**
+### **Gi statistics using fixed distance**
 
 ```{r}
 fips <- order(hunan$County)
