--- a/take_home_ex1/take_home_ex1.qmd
+++ b/take_home_ex1/take_home_ex1.qmd
@@ -21,7 +21,7 @@ Transportation is a pivotal aspect of daily life for Singaporean residents. In 2
 
 ## 2.1 Objectives
 
-Exploratory Spatial Data Analysis (ESDA) hold tremendous potential to address complex problems facing society. In this study, I will demonstrate how to apply appropriate Local Indicators of Spatial Association (GLISA) to undercover the spatial and spatio-temporal mobility patterns of public bus passengers in Singapore.
+Exploratory Spatial Data Analysis (ESDA) hold tremendous potential to address complex problems facing society, such as transportation issue and development. In this study, I will demonstrate how to apply geospatial visualisation and appropriate Local Indicators of Spatial Association (LISA) to undercover the spatial and spatio-temporal mobility patterns of public bus passengers in Singapore. I will also propose some recommendations in this study.
 
 ## 2.2 The Study Area
 
