--- a/hands_on_ex3/hands_on_ex3.qmd
+++ b/hands_on_ex3/hands_on_ex3.qmd
@@ -61,7 +61,7 @@ odbus$DESTINATION_PT_CODE <- as.factor(odbus$DESTINATION_PT_CODE)
 
 ## **Extracting the study data**
 
-For the purpose of this exercise, we will extract commuting flows on weekday and between 6 and 9 o\'clock.
+For the purpose of this exercise, we will extract commuting flows on weekday and between 6 and 9 o'clock.
 
 ```{r}
 odbus6_9 <- odbus %>%
@@ -224,7 +224,7 @@ flowLine <- od2line(flow = od_data1,
                     zone_code = "SUBZONE_C")
 ```
 
-##  **Visualising the desire lines**
+## **Visualising the desire lines**
 
 ```{r}
 tm_shape(mpsz) +
