--- a/take_home_ex1/take_home_ex1.qmd
+++ b/take_home_ex1/take_home_ex1.qmd
@@ -41,7 +41,7 @@ pacman::p_load(tmap, sf, tidyverse, knitr, sfdep, plotly)
 
 ### **3.1.1 Aspatial data**
 
-***Passenger Volume by Origin Destination Bus Stops*** will be downloaded from [LTA DataMall](https://datamall.lta.gov.sg/content/datamall/en.html). Three months dataset are downloaded: **Aug, Sep and Oct 23**. This study will use only Aug 23 data.
+***Passenger Volume by Origin Destination Bus Stops*** will be downloaded from [LTA DataMall](https://datamall.lta.gov.sg/content/datamall/en.html). Aug 2023 dataset is dowloaded. This study will use only **Aug 2023** data.
 
 Below are the detailed steps to obtain the dataset:
 
@@ -75,7 +75,11 @@ Two geospatial data will be used in this study, they are:
 
 ![](images/4.PNG){width="532"}
 
--   ***hexagon***, a [hexagon](https://desktop.arcgis.com/en/arcmap/latest/tools/spatial-statistics-toolbox/h-whyhexagons.htm) layer of 250m (this distance is the perpendicular distance between the centre of the hexagon and its edges.). Guidance on how it is created is located [here](https://urbandatapalette.com/post/2021-08-tessellation-sf/). It will be demonstrated in the Section [4.2 Hexagon].
+-   ***hexagon***, a [hexagon](https://desktop.arcgis.com/en/arcmap/latest/tools/spatial-statistics-toolbox/h-whyhexagons.htm) layer of 250m (this distance is the perpendicular distance between the centre of the hexagon and its edges.). Guidance on how it is created is located [here](https://urbandatapalette.com/post/2021-08-tessellation-sf/).
+
+::: callout-note
+The steps to create the hexagon layer in this study is located in Section [4.2 Hexagon].
+:::
 
 ## **3.2 Importing the data into R Environment**
 
@@ -371,7 +375,7 @@ ggplot(data=mpsz_origtrip,
 
 ## **5.2 Weekday afternoon peak -** 5pm to 8pm
 
-Append the hexagon from busstop_mpsz data frame onto origin17_20 data frame. The steps will be the same as above from Section [5.1 Weekday morning peak - 6am to 9am]
+Append the hexagon from busstop_mpsz data frame onto origin17_20 data frame. The steps will be the same as above from Section \[5.1 Weekday morning peak - 6am to 9am\]
 
 ```{r}
 origin_SZ2 <- left_join(origin17_20 , busstop_mpsz,
@@ -590,7 +594,9 @@ ggplot(data=mpsz_origtrip4,
 From all the Choropleth Visualization above, a few notable observations:
 
 1.  Woodlands Checkpoint and Johor Bahru Checkpoint consistently exhibit high passenger volumes. This might be attributed to daily commuting between Malaysia and Singapore for work. On weekends, there could be Singaporeans traveling to Malaysia for shopping and leisure activities.
-2.  Orchard and Somerset stations consistently record high passenger volumes, except during the weekday morning peak hours (6 am to 9 am). This high passenger volumes might be due to individuals traveling to central locations for their meals.
+2.  Orchard and Somerset stations consistently record high passenger volumes, except during the weekday morning peak hours (6 am to 9 am). This high passenger volumes might be due to individuals traveling to central locations for their meals. In addition, as it is the central business distinct area, most companies will be in central area. This explains the influx of passenger volumes in these areas[^4].
+
+[^4]: https://www.corporateservicessingapore.com/7-popular-business-locations-singapore/
 
 # **6 Local Indicators of Spatial Association (LISA) Analysis**
 
@@ -1014,12 +1020,14 @@ The amalgamation of information from both the LISA maps and geospatial visualiza
 
 # **7 Conclusion**
 
-The passengers volume of the different areas are examined in this study. The persistent issue of extensive waiting times at Woodlands and Tuas checkpoints during peak periods, such as Polling Day and the start of school holidays [^4], along with the appalling 4.5-hour queues experienced on Vesak Day weekend[^5], highlights a critical problem impacting commuters' daily lives and travel plans.
+The passengers volume of the different areas are examined in this study. The persistent issue of extensive waiting times at Woodlands and Tuas checkpoints during peak periods, such as Polling Day and the start of school holidays [^5], along with the appalling 4.5-hour queues experienced on Vesak Day weekend[^6], highlights a critical problem impacting commuters' daily lives and travel plans.
 
-[^4]: https://www.asiaone.com/singapore/waited-bus-1-hour-commuters-stuck-woodlands-tuas-checkpoints-polling-day-september-school-holidays
+[^5]: https://www.asiaone.com/singapore/waited-bus-1-hour-commuters-stuck-woodlands-tuas-checkpoints-polling-day-september-school-holidays
 
-[^5]: https://mothership.sg/2023/06/jams-sg-jb-causeway-vesak-day/
+[^6]: https://mothership.sg/2023/06/jams-sg-jb-causeway-vesak-day/
 
 One possible solution will be to provide real-time updates on traffic conditions and anticipated waiting times through mobile apps, websites, or electronic signboards. This information would enable commuters to plan their journeys more effectively and choose alternative routes if necessary.
 
 In regions like Tuas and areas adjacent to Gedong Camp, it would be beneficial to establish additional bus stops or enhance bus services to facilitate passenger commutes.
+
+Further studies are be explored using the Sep and Oct 2023 dataset.
