--- a/take_home_ex1/take_home_ex1.qmd
+++ b/take_home_ex1/take_home_ex1.qmd
@@ -616,6 +616,14 @@ wm_q <- mpsz_origtrip%>%
         
 ```
 
+::: callout-note
+For `st_weights()`:
+
+-   *allow_zero*: It is set to "TRUE", and assigns zero as lagged value to zone without neighbors. The reason is that there is hexagon layer with no neighour (example: Johor Bahru Station)
+
+-   *style*: Default \"W\" for row standardized weights.
+:::
+
 ```{r}
 wm_q
 ```
@@ -630,6 +638,18 @@ lisa <- wm_q %>%
     TRIPS, nb, wt, nsim = 99,zero.policy= TRUE, na.action = na.exclude),
          .before = 1) %>%
   unnest(local_moran)
+```
+
+::: callout-note
+Reference from [link](https://r-spatial.github.io/spdep/reference/localmoran.html):
+
+-   zero.policy is set to TRUE as it will assign zero to the lagged value of zones without neighbours
+
+-   na.action is set to na.exclude - In these cases the weights list will be subsetted to remove NAs in the data. In addition, it will be necessary to set zero.policy to TRUE because this subsetting may create no-neighbour observations (as per above)
+:::
+
+```{r}
+lisa
 ```
 
 ### 6.1.3 **Visualising local Moran's I**
@@ -1030,4 +1050,4 @@ One possible solution will be to provide real-time updates on traffic conditions
 
 In regions like Tuas and areas adjacent to Gedong Camp, it would be beneficial to establish additional bus stops or enhance bus services to facilitate passenger commutes.
 
-Further studies can done to explore using the Sep and Oct 2023 dataset.
+Further studies can done to explore using the Sep and Oct 2023 dataset. Moreover, pockets of small regions with high-high and low-low can be examined further to understand what might be the reasons for it.
